--- a/web/index.html
+++ b/web/index.html
@@ -583,7 +583,7 @@ body.b_dark #b_sydWelcomeTemplate .b_wlcmLogo {
   <div id="sydWelcomeTemplate">
     <div id="b_sydWelcomeTemplate" class="b_wlcmCont" data-priority="2" style="margin-top: 66px;">
       <div class="b_wlcmHdr"><div class="b_wlcmLogo"></div>
-      <div class="b_wlcmDesc">缀扣科技AI是由必应 AI 支持的 Web Copilot</div>
+      <div class="b_wlcmDesc">欢迎，缀扣科技AI是由必应 AI 支持的 Web Copilot</div>
     </div>
     <div class="b_wlcmTileCont b_wlcmTileContConsumer"></div>
     <div class="b_ziTileCont b_wlcmCont"></div>
